--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -263,7 +263,7 @@ h6 {
   .navmenu a,
   .navmenu a:focus {
     color: var(--nav-color);
-    font-size: 14px;
+    font-size: 16px;
     font-family: var(--nav-font);
     font-weight: 500;
     display: flex;
@@ -271,7 +271,8 @@ h6 {
     justify-content: space-between;
     white-space: nowrap;
     transition: 0.3s;
-    padding: 10px 20px;
+    padding-bottom: 5px !important;
+    padding: 10px 15px;
     text-decoration: none;
     position: relative;
   }
