--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2799,7 +2799,7 @@ color: var(--bs-white);
 
 .call-to-action .trust-indicators .indicator .label {
   font-size: 0.85rem;
-  color:#efefef
+  color:#efefef;
   font-weight: 400;
 }
 
