--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3888,7 +3888,7 @@ color: var(--bs-white);
         
         .portfolio-game-item {
             margin: 0 15px 15px;
-            width: auto;
+            width: 250px;
             height: 300px;
             display: flex;
             display: -webkit-flex;
